<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Global-->
    <string name="app_name">InstaFlixApp</string>
    <string name="snack_bar_dismiss_message">Dismiss</string>
    <string name="snack_bar_functionality">Functionality on the way</string>

    <!--MainActivity-->
    <string name="menu_title_home">Home</string>
    <string name="menu_title_movies">Movies</string>
    <string name="menu_title_tv_shows">Tv Shows</string>
    <string name="menu_toolbar_title">Search</string>

    <!--HomeFragment-->
    <string name="tv_popular_movies">Popular Movies</string>
    <string name="tv_popular_tv_shows">Popular Tv Shows</string>
    <string name="connectivity_error">Looks like you don\'t have internet connection, please try again.</string>
    <string name="snack_bar_try_again_message">Try again</string>
    <string name="server_error">"Internal server error with code: "</string>
    <string name="unknown_error">"Unknown error: "</string>
    <string name="tv_home_toolbar_title">Home</string>

    <!--MovieFragment-->
    <string name="tv_movie_toolbar_title">Movies</string>
    <string name="tv_popular_action_movies">Popular Action Movies</string>
    <string name="tv_popular_comedy_movies">Popular Comedy Movies</string>

    <!--TvShows Fragment-->
    <string name="tv_tv_show_toolbar_title">Tv Shows</string>
    <string name="tv_popular_animation_tv_shows">Popular Animation Tv Shows</string>
    <string name="tv_popular_drama_tv_shows">Popular Drama Tv Shows</string>

    <!--Detail Fragment-->
    <string name="ic_share">Share</string>
    <string name="ic_download">Download</string>
    <string name="ic_favorite">Favorite</string>
    <string name="ic_bar">|</string>
    <string name="tv_release_date">Release date</string>
    <string name="tv_total_votes">Total votes: </string>

</resources>
