<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.DarkOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:contentScrim="@color/darker_gray"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/black">

            <ImageView
                android:id="@+id/programDetailImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:ignore="ContentDescription"
                tools:src="@mipmap/ic_launcher" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/programDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragments_background_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_padding_middle"
            android:transitionGroup="true">

            <TextView
                android:id="@+id/programTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Superman Action Quantum Mania" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/releaseContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/programTitle">

                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_padding_min"
                    android:maxLines="1"
                    android:text="@string/tv_release_date"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_bar"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/programReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white"
                    tools:text="2022-12-16" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/iconsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/releaseContainer">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/cbFavorite"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:button="@drawable/states_favorite"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:useMaterialThemeColors="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_favorite"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/common_padding_extra"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/download"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_download"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_download"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/share"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_share"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ic_share"
                        android:textAlignment="center"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/voteCountContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconsContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/tv_total_votes"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_marginStart="3dp"
                    android:id="@+id/progra_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white"
                    tools:text="70.400" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/voteAverageContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voteCountContainer">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_star"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/program_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="@color/white"
                    tools:text="7.7" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/programDetailSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_min"
                android:padding="@dimen/common_padding_default"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voteAverageContainer"
                tools:text="Turn off the lights, get into bed and plug in your earphones. It's time for a creepy bedtime story. For the discerning horror fan, we cover the most chilling cases from around the world. From the paranormal to the supernatural, unsolved mysteries and strange deaths to cryptids, conspiracy theories and the most disturbing of true crimes, all told in a unique and creepy way. Join us every week for a new scary story" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
